--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.2.1",
     "mongodb": "1.4.x",
     "mongoskin": "1.3.20",
-    "monk": "~1.0.1"
+    "monk": "~1.0.1",
+    "typescript": ">0.0.1"
 }
 }
