--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "cpsc303a0",
+  "name": "cpsc303-tutorial",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
+    "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.12.4",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
-    "mongodb": "1.4.x",
-    "mongoskin": "1.3.20",
-    "monk": "~1.0.1",
-    "typescript": ">0.0.1"
-}
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
+  }
 }
