--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "cpsc303-tutorial",
-  "version": "0.0.0",
+  "name": "dropcomics",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node www.js"
+    "start": "node www.js",
+    "compile:": "./tscall.sh"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jwt-simple": "^0.4.1",
+    "mongoose": "~3.8.12",
     "morgan": "~1.6.1",
+    "passport": "~0.2.0",
+    "passport-jwt": "^1.2.1",
     "serve-favicon": "~2.3.0"
   }
 }
