--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node www.js",
-    "compile:": "./tscall.sh"
+    "start": "node www.js"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
@@ -15,6 +14,7 @@
     "jade": "~1.11.0",
     "jwt-simple": "^0.4.1",
     "mongoose": "~3.8.12",
+    "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "passport": "~0.2.0",
     "passport-jwt": "^1.2.1",
