--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fs": "0.0.2",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
