--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "fs": "0.0.2",
     "https": "^1.0.0",
     "jade": "~1.11.0",
-    "monk": "^1.0.1",
+    "mongodb": "1.4.x",
+    "mongoskin": "1.3.20",
+    "monk": "~1.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
