--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoskin": "1.3.20",
     "monk": "~1.0.1",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
