--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "fs": "0.0.2",
+    "http": "0.0.0",
     "https": "^1.0.0",
     "jade": "~1.11.0",
     "mongodb": "1.4.x",
