--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "fs": "0.0.2",
+    "http": "0.0.0",
     "https": "^1.0.0",
     "jade": "~1.11.0",
     "mongodb": "1.4.x",
     "mongoskin": "1.3.20",
     "monk": "~1.0.1",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
