--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.2",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "image-size": "^0.4.0",
     "jade": "~1.11.0",
     "mongodb": "1.4.x",
     "mongoskin": "1.3.20",
