--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "https": "^1.0.0",
     "image-size": "^0.4.0",
     "jade": "~1.11.0",
-    "mongodb": "1.4.x",
+    "mocha": "^2.4.5",
+    "mongo": "^0.1.0",
+    "mongodb": "^1.4.40",
     "mongoskin": "1.3.20",
     "monk": "~1.0.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "should": "^8.2.2"
   }
 }
