--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node www.js"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
@@ -24,7 +25,9 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "progress": "^1.1.8",
+    "semaphore": "^1.0.5",
     "serve-favicon": "~2.3.0",
-    "should": "^8.2.2"
+    "should": "^8.2.2",
+    "supertest": "^1.2.0"
   }
 }
