--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "monk": "~1.0.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "nodemailer": "^0.7.1",
     "serve-favicon": "~2.3.0"
   }
 }
