--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^1.5.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
+    "collections": "^3.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -25,9 +26,10 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "nodemailer": "^0.7.1",
-    "serve-favicon": "~2.3.0",
     "progress": "^1.1.8",
+    "rwlock": "^5.0.0",
     "semaphore": "^1.0.5",
+    "serve-favicon": "~2.3.0",
     "should": "^8.2.2",
     "supertest": "^1.2.0"
   }
